# booth_archiver

./: .gitignore  Cargo.toml  README.md  cookie.txt  emojis.ron  pnpm-lock.yaml  rust-toolchain.toml  test.py  thingy.txt  upload.py
.cargo/: config.toml
src/: cache.rs  lib.rs  main.rs
src/api_structs/: items.rs  wish_list_name_items.rs
src/models/: booth_scrapper.rs  config.rs  item_metadata.rs  item_row.rs  translation.rs  web_client.rs  web_scrapper.rs  xlsx.rs
src/zaphkiel/: cache.rs  html_cache.rs  lazy_statics.rs  macros.rs  pub_consts.rs  static_strs.rs  utils.rs  worker.rs  xlsx.rs
