[package]
name = "booth_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.5", features = ["improved_unicode", "rayon"] }
path-absolutize = "3.1.0"
rayon = "1.7.0"
ron = "0.8.0"
rust_xlsxwriter = "0.49.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
ureq = { version = "2.7.1", features = ["cookies", "cookie_store", "json", "serde", "serde_json"] }
