[package]
name = "booth_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[dependencies]
rust_xlsxwriter = "0.79.0"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.16", features = ["full", ] }
tracing-futures = { version = "0.2.5" }
futures = "0.3.31" # for `buffer_unordered`, see: https://stackoverflow.com/questions/76316925/how-to-make-a-tokio-stream-works-concurrently
reqwest = { version = "0.12.9", features = ["cookies", "json", "stream"] }
tracing = { version = "0.1.40", features = ["attributes", "valuable", "log"] }
tracing-subscriber = { version = "0.3.18" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
ron = "0.8.1"
tracing-unwrap = { version = "1.0.1", features = ["log-location"] }
